--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,17 @@
         "zendframework/zendframework": "~2.3",
         "zfcampus/zf-apigility": "~1.0",
         "zfcampus/zf-apigility-documentation": "~1.0",
-        "zfcampus/zf-development-mode": "~2.0"
+        "zfcampus/zf-development-mode": "~2.0",
+        "zfcampus/zf-apigility-doctrine": "dev-master",
+        "doctrine/doctrine-orm-module": "*"
     },
     "require-dev": {
         "zendframework/zftool": "dev-master",
         "zendframework/zend-developer-tools": "dev-master",
         "zfcampus/zf-apigility-admin": "~1.0",
         "zfcampus/zf-apigility-welcome": "~1.0",
-        "zfcampus/zf-deploy": "~1.0"
+        "zfcampus/zf-deploy": "~1.0",
+        "hounddog/doctrine-data-fixture-module": "0.0.*",
+        "fzaninotto/faker": "dev-master"
     }
 }
